// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Toolbar ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-1f92022-MuiToolbar-root"
  />
</div>
`;

exports[`Toolbar ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-1f92022-MuiToolbar-root"
  />
</div>
`;

exports[`Toolbar ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-s3ewxw-MuiToolbar-root"
  />
</div>
`;

exports[`Toolbar ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-dense css-1y7tgle-MuiToolbar-root"
  />
</div>
`;
